RESOLVED FIXED47172
[Qt]Windowless flash plugin is not rendered in Symbian
https://bugs.webkit.org/show_bug.cgi?id=47172
Summary [Qt]Windowless flash plugin is not rendered in Symbian
Dinu Jacob
Reported 2010-10-05 06:30:19 PDT
Flash in the url https://bugs.webkit.org/enter_bug.cgi?product=WebKit is not displayed.
Attachments
proposed patch for Symbian-specific plugin code (1.60 KB, patch)
2010-10-05 09:43 PDT, mike.zraly
kling: review+
mike.zraly
Comment 1 2010-10-05 07:57:57 PDT
The problem addressed by this bug currently shows up regardless of whether we have a windowed or window-less plugin. The issue is that the Symbian PluginView implementation sets its m_windowRect and m_clipRect members before the platform widget gets created in the platformStart() method, so the plugin always has a height and width of zero.
mike.zraly
Comment 2 2010-10-05 09:43:41 PDT
Created attachment 69797 [details] proposed patch for Symbian-specific plugin code
Suresh Voruganti
Comment 3 2010-10-05 10:38:10 PDT
Added the dependency to 39121 Master bug for QtWebkit 2.1 as the fix is needed for QtWebkit 2.1
Andreas Kling
Comment 4 2010-10-06 22:28:04 PDT
Comment on attachment 69797 [details] proposed patch for Symbian-specific plugin code View in context: https://bugs.webkit.org/attachment.cgi?id=69797&action=review r=me > WebCore/ChangeLog:8 > + No new tests. (OOPS!) Oops indeed, please remove this line.
Simon Hausmann
Comment 5 2010-10-07 02:12:50 PDT
Ademar Reis
Comment 6 2010-10-08 04:45:21 PDT
Revision r69282 cherry-picked into qtwebkit-2.1 with commit 009aaea <http://gitorious.org/webkit/qtwebkit/commit/009aaea>
Note You need to log in before you can comment on or make changes to this bug.