Windowless flash plugin is not rendered in Symbian https://bugs.webkit.org/show_bug.cgi?id=47172

Patch by Zraly Mike <mike.zraly@nokia.com> on 2010-10-07
Reviewed by Andreas Kling.

* plugins/symbian/PluginViewSymbian.cpp:
(WebCore::PluginView::platformStart):
Add call to updatePluginWidget() following changes to
platform widget.  This is needed to set PluginView's
m_windowRect and m_clipRect members properly after
the proxy widget and its container get created.

Canonical link: https://commits.webkit.org/59883@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69282 268f45cc-cd09-0410-ab3c-d52691b4dbfc