WebCore/plugins/symbian/PluginViewSymbian.cpp
@@ -1,5 +1,5 @@
 /*
-    Copyright (C) 2009 Nokia Corporation and/or its subsidiary(-ies)
+    Copyright (C) 2009, 2010 Nokia Corporation and/or its subsidiary(-ies)
 
     This library is free software; you can redistribute it and/or
     modify it under the terms of the GNU Library General Public
@@ -413,6 +413,7 @@ bool PluginView::platformStart()
         m_npWindow.type = NPWindowTypeDrawable;
         m_npWindow.window = 0; // Not used?
     }    
+    updatePluginWidget();
     setNPWindowIfNeeded();
     
     return true;
